--- a/docs/latex/TestingPolicy.tex
+++ b/docs/latex/TestingPolicy.tex
@@ -429,8 +429,46 @@ performance and user experience, regardless of the platform in use.
 \addcontentsline{toc}{subsection}{Performance}
 \subsection*{Performance}
 
-\addcontentsline{toc}{subsection}{Usability}
-\subsection*{Usability}
+\addcontentsline{toc}{subsection}{Maintainability}
+\subsection*{Maintainability}
+
+Maintainability assesses the ease with which the application can be maintained and updated.
+It involves the ability to identify and fix defects, as well as the ability to keep the application up to date with the latest technologies on all 
+supported platforms.
+
+Desktop apps are expected to be maintained for a long time, especially if they do not have a subscription model. Therefore, it is important to ensure that the codebase is maintainable. 
+Blix is designed with Maintainability in mind. Blix's plugins are designed to be as modular as possible, allowing for easy maintenance and updates.
+
+Furthermore, due to the user's ability to create their own plugins, the maintainability of the application is further enhanced, as the user can create their own plugins to fix defects or add new features.
+
+{\bf Quantification}
+
+To properly quantify Maintainability, we need to measure the costs incurred when maintaining the application. These costs include the costs of fixing defects, the costs of adding new features, and the costs of updating the application to the latest technologies.
+
+Naturally the costs of maintaining the application will increase over time, as the application becomes more complex and the codebase grows. However, the costs should not increase exponentially, as this would indicate that the application is not maintainable.
+These will be measured over time, on a yearly bases. 
+
+Due to the fact that Blix is stored purely on the User's device, the costs of maintaining the application are not incurred by the developers, but by the user. Therefore, the costs of maintaining the application are not quantifiable by the developers, but by the users.
+In essence the greatest cost of maintaining the application is maintaining the plugin marketplace where users can share and update plugins. 
+
+Thus maintainability will be measured by the activity on the marketplace, such as the number of plugins added, the number of plugins updated, and the number of plugins downloaded per month.
+
+\subsubsection*{Goals}
+\addcontentsline{toc}{subsubsection}{Goals}
+
+The goals for maintainability are as follows:
+
+\begin{enumerate}
+  \item The marketplace should have at least 10 plugins added per month.
+  \item The marketplace should have at least 5 plugins updated per month.
+  \item The marketplace should have at least 100 plugins downloaded per month.
+\end{enumerate}
+
+We have set these goals to ensure that the application is maintainable. If these goals are not met, it indicates that the application is not maintainable, 
+and that the application is not being maintained by the users. We ensure that these goals are met by actively providing new updates to the app and 
+encouraging users to create and share their own plugins.
+
+
 
 
 \addcontentsline{toc}{subsection}{Security}
