--- a/docs/latex/SRSv3.tex
+++ b/docs/latex/SRSv3.tex
@@ -136,6 +136,29 @@ preferences to the cloud, including window layout, keymap settings and themes.
 \pagebreak
 
 
+\addcontentsline{toc}{section}{Specifications}
+\section*{Specifications}
+
+\addcontentsline{toc}{subsection}{Hardware Requirements}
+\subsection*{Hardware Requirements}
+\begin{itemize}
+  \item[\textbullet] \textbf{2 GB RAM}
+  \item[\textbullet] \textbf{1.8Ghz }.
+
+\end{itemize}
+
+\addcontentsline{toc}{subsection}{System Requirements}
+\subsection*{System Requirements}
+
+Blix is compatible with the following operating systems:
+\begin{itemize}
+  \item[\textbullet] \textbf{Windows}
+  \item[\textbullet] \textbf{Linux }.
+  \item[\textbullet] \textbf{MacOS }.
+\end{itemize}
+
+ Internet connection is not required, however additional features are available when connected to the internet.
+
 \addcontentsline{toc}{section}{User Stories and Characteristics}
 \section*{User Stories and Characteristics}
 
