--- a/docs/latex/TestingPolicy.tex
+++ b/docs/latex/TestingPolicy.tex
@@ -207,6 +207,8 @@ Furthermore due to the popularity of Jest, there is a lot of documentation and
 support for it, which makes it easy to use and learn, which was essential
 considering our lack of experience with testing frameworks
 
+JEST: \href{https://jestjs.io/}{https://jestjs.io/}
+
 \addcontentsline{toc}{subsection}{End to End Testing}
 \subsection*{End to End Testing}
 
@@ -237,6 +239,7 @@ testing.
 Furthermore playwright is relatively easy to use and has a lot of documentation
 and support, due to its popularity, which makes it easy to learn and use.
 
+Playwright: \href{https://playwright.dev/}{https://playwright.dev/}
 \addcontentsline{toc}{subsection}{CICD}
 \subsection*{CICD}
 
